tests/NormalTests/paczka1/fuzzy1/44254844.err
Error in line 1: Flt0AxYPDF4 S346 33,6
Error in line 3: qoFMXSeF S346 0,5
Error in line 11: Flt0AxYPDF4 S153 91,6
Error in line 21: 20wNoWLZfUF S631 2,1
Error in line 36: 20wNoWLZfUF S34 39,4
Error in line 8: qoFMXSeF S575 31,5
